--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  CHANGES:

    * Knit format repositories are deprecated and bzr will now emit
      warnings whenever it encounters one.  Use ``bzr upgrade`` to upgrade
      knit repositories to pack format.  (Andrew Bennetts)
      

  FEATURES:


  IMPROVEMENTS:

    * ``bzr check`` can now be told which elements at a location it should
      check.  (Daniel Watkins)

    * Commit now supports ``--exclude`` (or ``-x``) to exclude some files
      from the commit. (Robert Collins, #3117)

    * Give a more specific error when target branch is not reachable.
      (James Westby)

    * Implemented a custom ``walkdirs_utf8`` implementation for win32.
      This uses a pyrex extension to get direct access to the
      ``FindFirstFileW`` style apis, rather than using ``listdir`` +
      ``lstat``. Shows a very strong improvement in commands like
      ``status`` and ``diff`` which have to iterate the working tree.
      Anywhere from 2x-6x faster depending on the size of the tree (bigger
      trees, bigger benefit.) (John Arbash Meinel)

    * Fetching data between repositories that have the same model but no 
      optimised fetcher will not reserialise all the revisions, increasing
      performance. (Robert Collins, John Arbash Meinel)

  BUG FIXES:

    * Add more tests that stacking does not create deltas spanning
      physical repository boundaries.
      (Martin Pool, #252428)

    * Better message about incompatible repositories.
      (Martin Pool, #206258)

    * ``bzr branch --stacked`` ensures the destination branch format can
      support stacking, even if the origin does not.
      (Martin Pool)

    * ``bzr export`` no longer exports ``.bzrrules``.
      (Ian Clatworthy)

    * Fix a test case that was failing if encoding wasn't UTF-8.
      (John Arbash Meinel, #247585)

    * Fix "no buffer space available" error when branching with the new